// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`api events when user is "admin" should subscribe shoots for a single cluster 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "name": "fooShoot",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single cluster 2`] = `
[
  {
    "metadata": {
      "annotations": {
        "gardener.cloud/created-by": "foo@example.org",
      },
      "name": "fooShoot",
      "namespace": "garden-foo",
      "uid": 1,
    },
    "spec": {
      "cloudProfile": {
        "kind": "CloudProfile",
        "name": "infra1-profileName",
      },
      "hibernation": {
        "enabled": false,
      },
      "kubernetes": {
        "version": "1.16.0",
      },
      "provider": {
        "type": "fooInfra",
      },
      "purpose": "fooPurpose",
      "region": "foo-west",
      "secretBindingName": "foo-infra1",
      "seedName": "infra1-seed",
    },
    "status": {
      "advertisedAddresses": [
        {
          "name": "external",
          "url": "https://api.fooShoot.foo.shoot.test",
        },
      ],
      "technicalID": "shoot--foo--fooShoot",
    },
  },
  {
    "apiVersion": "v1",
    "code": 404,
    "details": {
      "group": "core.gardener.cloud",
      "kind": "Shoot",
      "uid": 2,
    },
    "kind": "Status",
    "message": "Shoot with uid 2 does not exist",
    "reason": "NotFound",
    "status": "Failure",
  },
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single namespace 2`] = `
[
  {
    "metadata": {
      "annotations": {
        "gardener.cloud/created-by": "foo@example.org",
      },
      "name": "fooShoot",
      "namespace": "garden-foo",
      "uid": 1,
    },
    "spec": {
      "cloudProfile": {
        "kind": "CloudProfile",
        "name": "infra1-profileName",
      },
      "hibernation": {
        "enabled": false,
      },
      "kubernetes": {
        "version": "1.16.0",
      },
      "provider": {
        "type": "fooInfra",
      },
      "purpose": "fooPurpose",
      "region": "foo-west",
      "secretBindingName": "foo-infra1",
      "seedName": "infra1-seed",
    },
    "status": {
      "advertisedAddresses": [
        {
          "name": "external",
          "url": "https://api.fooShoot.foo.shoot.test",
        },
      ],
      "technicalID": "shoot--foo--fooShoot",
    },
  },
  {
    "apiVersion": "v1",
    "code": 404,
    "details": {
      "group": "core.gardener.cloud",
      "kind": "Shoot",
      "uid": 4,
    },
    "kind": "Status",
    "message": "Shoot with uid 4 does not exist",
    "reason": "NotFound",
    "status": "Failure",
  },
]
`;

exports[`api events when user is "admin" should subscribe shoots for all namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for all namespace 2`] = `
[
  {
    "metadata": {
      "annotations": {
        "gardener.cloud/created-by": "foo@example.org",
      },
      "name": "fooShoot",
      "namespace": "garden-foo",
      "uid": 1,
    },
    "spec": {
      "cloudProfile": {
        "kind": "CloudProfile",
        "name": "infra1-profileName",
      },
      "hibernation": {
        "enabled": false,
      },
      "kubernetes": {
        "version": "1.16.0",
      },
      "provider": {
        "type": "fooInfra",
      },
      "purpose": "fooPurpose",
      "region": "foo-west",
      "secretBindingName": "foo-infra1",
      "seedName": "infra1-seed",
    },
    "status": {
      "advertisedAddresses": [
        {
          "name": "external",
          "url": "https://api.fooShoot.foo.shoot.test",
        },
      ],
      "technicalID": "shoot--foo--fooShoot",
    },
  },
  {
    "metadata": {
      "annotations": {
        "gardener.cloud/created-by": "admin@example.org",
      },
      "name": "infra1-seed",
      "namespace": "garden",
      "uid": 4,
    },
    "spec": {
      "cloudProfile": {
        "kind": "CloudProfile",
        "name": "infra1-profileName",
      },
      "hibernation": {
        "enabled": false,
      },
      "kubernetes": {
        "version": "1.16.0",
      },
      "provider": {
        "type": "fooInfra",
      },
      "purpose": "foo-purpose",
      "region": "foo-west",
      "secretBindingName": "soil-infra1",
      "seedName": "soil-infra1",
    },
    "status": {
      "advertisedAddresses": [
        {
          "name": "external",
          "url": "https://api.infra1-seed.garden.shoot.test",
        },
      ],
      "technicalID": "shoot--garden--infra1-seed",
    },
  },
]
`;

exports[`api events when user is "admin" should subscribe unhealthy shoots for all namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should synchronize a project 1`] = `
[
  {
    "metadata": {
      "name": "bar",
      "resourceVersion": "42",
      "uid": 2,
    },
    "spec": {
      "createdBy": {
        "apiGroup": "rbac.authorization.k8s.io",
        "kind": "User",
        "name": "foo@example.org",
      },
      "description": "bar-description",
      "namespace": "garden-bar",
      "owner": {
        "apiGroup": "rbac.authorization.k8s.io",
        "kind": "User",
        "name": "bar@example.org",
      },
      "purpose": "bar-purpose",
    },
    "status": {
      "phase": "Ready",
    },
  },
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single cluster 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "name": "fooShoot",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single namespace 2`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for all namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe unhealthy shoots for all namespace 1`] = `
[
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  [
    {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": {
        "nonResourceAttributes": undefined,
        "resourceAttributes": {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;
